# serverless-rust-microservice

./: .env  Cargo.toml  README.md  response.json  s3_event.json
async_lambda_s3/: Cargo.toml
async_lambda_s3/src/: main.rs
src/: lib.rs  main.rs
