[package]
name = "serverless-rust-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.7"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
