[package]
name = "async-lambda-s3"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = "0.7"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-sdk-s3 = "1.16.0" # updated to the latest version
humansize = "2.0.0"
aws_lambda_events = "0.5"
serde_json = "1.0"
aws-config = "1.1.6" # updated to the latest version